[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/Fonts/Watermelon Days.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://src/Menu/Endgame.gd" type="Script" id=2]
[ext_resource path="res://assets/UI/SimpleBox.tres" type="Theme" id=3]
[ext_resource path="res://assets/SFX/newhighscore.ogg" type="AudioStream" id=4]

[sub_resource type="DynamicFont" id=1]
size = 112
outline_size = 5
outline_color = Color( 0.301961, 0.65098, 1, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 72
outline_size = 5
outline_color = Color( 0.301961, 0.65098, 1, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 48
font_data = ExtResource( 1 )

[node name="Endgame" type="Node"]
script = ExtResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TitleLabel" type="Label" parent="CanvasLayer"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -247.5
margin_top = 110.0
margin_right = 247.5
margin_bottom = 238.0
custom_fonts/font = SubResource( 1 )
text = "CRYSTAL DASH"

[node name="CreatorLabel" type="Label" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -133.0
margin_top = -310.0
margin_right = 133.0
margin_bottom = -228.0
custom_fonts/font = SubResource( 2 )
text = "game over!"

[node name="TimeText" type="Label" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -960.0
margin_top = -165.0
margin_right = 960.0
margin_bottom = -83.0
custom_fonts/font = SubResource( 2 )
text = "Total time: 0"
align = 1

[node name="LevelText" type="Label" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -960.0
margin_top = -75.0
margin_right = 960.0
margin_bottom = 7.0
custom_fonts/font = SubResource( 2 )
text = "final level: 0"
align = 1

[node name="ScoreText" type="Label" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -962.0
margin_top = 35.0
margin_right = 958.0
margin_bottom = 117.0
custom_fonts/font = SubResource( 2 )
text = "total score: 0"
align = 1

[node name="HiText" type="Label" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -962.0
margin_top = 136.0
margin_right = 958.0
margin_bottom = 218.0
custom_fonts/font = SubResource( 2 )
text = "new highscore! your place: 0"
align = 1

[node name="QuitButton" type="Button" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -65.0
margin_top = 360.0
margin_right = 65.0
margin_bottom = 421.0
theme = ExtResource( 3 )
custom_fonts/font = SubResource( 3 )
text = "menu"

[node name="Tween" type="Tween" parent="."]

[node name="Highscore" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -20.0

[connection signal="pressed" from="CanvasLayer/QuitButton" to="." method="_on_QuitButton_pressed"]
